@@ -178,7 +178,7 @@ $defaultPrices = array(
     array( 104, 20, 0, "Voltage-triggered Switch" ),
     array( 105, 20, 0, "Voltage-triggered Inverted Switch" ),
     array( 110, 50, 0, "Electric Floor" ),
-    array( 30, 1200, 0, "Automatic Door" ),
+    array( 30, 600, 0, "Automatic Door" ),
     array( 112, 1800, 0, "Powered Trapdoor" ),
     array( 70, 800, 0, "Pit Bull" ),
     array( 71, 100, 0, "Chihuahua" ),
@@ -187,7 +187,7 @@ $defaultPrices = array(
     array( 500, 50, 0, "Saw" ),
     array( 509, 2400, 0, "Crowbar" ),
     array( 501, 800, 0, "Cutting Torch" ),
-    array( 502, 800, 0, "S-W Model 36" ),
+    array( 502, 1200, 0, "S-W Model 36" ),
     array( 503, 150, 0, "Brick" ),
     array( 512, 200, 0, "Club" ),
     array( 505, 1200, 0, "Doorstop" ),
